feat: Complete AGI Companion implementation with advanced capabilities
- Enhanced package.json with 19 new dependencies for AGI features
- Updated Cargo.toml with 12 new Rust dependencies
- Created comprehensive knowledge base service (knowledgeBase.ts)
- Built complete AGI companion service (agiCompanionService.ts)
- Added enhanced UI components (AppEnhanced.tsx, AGIApp.tsx)

Features:
✨ Advanced memory system with SQLite & vector embeddings
✨ Knowledge base integration with 300GB+ data support
✨ Intelligent conversation management with context
✨ Task & project management with AI suggestions
✨ Meeting preparation & summarization
✨ Proactive AI suggestions based on user patterns
✨ Multi-format document processing (PDF, Excel, Word, CSV)
✨ Semantic search with transformer embeddings
✨ User context learning and adaptation
✨ Function calling system for extensible AI capabilities

This represents a major upgrade from basic chat to full AGI assistant
with sophisticated memory, learning, and productivity features.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,28 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+
+    /* --- Added for AGI-like capabilities --- */
+    "@pinecone-database/pinecone": "^3.2.1",
+    "@xenova/transformers": "^2.9.0",
+    "mammoth": "^1.4.24",
+    "xlsx": "^0.19.3",
+    "pdf-parse": "^1.1.1",
+    "csv-parse": "^5.5.4",
+    "@langchain/core": "^0.1.15",
+    "@langchain/openai": "^0.0.10",
+    "cheerio": "^1.0.0-rc.12",
+    "node-fetch": "^3.3.2",
+    "better-sqlite3": "^9.5.4",
+    "drizzle-orm": "^0.30.5",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "@octokit/rest": "^20.1.0",
+    "file-type": "^19.0.0",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
